# ojp-rs

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
examples/: find_journeys.rs
src/: lib.rs  model.rs  requests.rs
test_xml/: location_coordinate.xml  location_extended.xml  location_simple.xml  location_topographic.xml  req_location_coordinate.xml  req_location_extended.xml  req_location_simple.xml  req_location_topographic.xml  req_stop_complex.xml  req_stop_simple.xml  req_trip_complex.xml  req_trip_simple.xml  stop_complex.xml  stop_simple.xml  testing.md  trip_lots.xml  trip_simple.xml
