[package]
name = "ojp-rs"
version = "0.1.1"
edition = "2024"
description = "A library for interacting with Open Journey Planner (OJP) services"
readme = "README.md"
repository = "https://github.com/urban-travel/ojp-rs"
license-file = "LICENSE"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
# For minimal versions
native-tls = "0.2.14"
quick-xml = { version = "0.38.3", features = ["serialize"] }
rand = "0.9.2"
reqwest = "0.12.24"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tracing = "0.1.41"
